# qortara-governance-langchain

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: 01_basic_langchain.py  02_langgraph.py  README.md
examples/policies/: example.cedar
src/qortara_governance/: __init__.py  callback.py  client.py  config.py  context.py  decorators.py  exceptions.py  launcher.py  otel.py
src/qortara_governance/contract/: __init__.py  conformance.py  protocol.py  state.py
src/qortara_governance/patches/: __init__.py  action_builder.py  langgraph_patches.py  registry.py  tool_patches.py
tests/: conftest.py  test_client_circuit_breaker.py  test_config_precedence.py  test_context_propagation.py  test_init_idempotent.py  test_init_uses_default_adapters.py  test_otel_traceparent.py
tests/contract/: test_adapter_state_frozen.py  test_conformance_suite_on_mock_adapter.py  test_protocol_is_runtime_checkable.py  test_registry_find_spec_no_side_effects.py  test_registry_handles_apply_import_error.py  test_registry_multi_adapter.py  test_registry_skips_unavailable_framework.py  test_registry_version_mismatch.py
tests/patches/: test_exempt_sentinel.py  test_langgraph_patches_rejects_double_install.py  test_langgraph_patches_satisfies_contract.py  test_langgraph_toolnode.py  test_native_tool_calling_bypass_closed.py  test_tool_patches_allow.py  test_tool_patches_deny.py  test_tool_patches_rejects_double_install.py  test_tool_patches_satisfies_contract.py  test_unpatch_byte_identical.py
